# chess-ai

./: .gitignore  README.md  pyproject.toml
src/: board.py  const.py  dragger.py  game.py  main.py  piece.py  square.py
