[tool.poetry]
name = "chess-ai"
version = "0.1.0"
packages = [{include = "src"}]
description = ""
authors = ["sgsvaya <93988228+sgsvaya@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pygame = "^2.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


